# fastapi-template

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requests.org  requirements-test.txt  requirements.txt
.github/workflows/: pre-commit.yaml
app/: config.py  database.py  main.py  models.py  schemas.py  secuirty.py  utils.py
app/admin/: access.py  schemas.py
app/admin/routers/: meta.py  users.py
app/platform/: access.py  router.py
app/platform/routers/: meta.py  users.py
migrations/: env.py
migrations/versions/: 04079b9b3382_.py  3a8c906c289e_.py
